Add Category in CreateProductDialog
